# solana-vrf

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  consumer_accounts.rs  fulfiller.rs  listener.rs  main.rs  metrics.rs  photon.rs  vrf.rs
docs/: architecture.md  deployment.md  integration-guide.md  security.md
examples/: README.md  batch-requests.ts  dice-game.ts  package.json  request-randomness.ts  tsconfig.json
program/: Anchor.toml  package.json
program/programs/roll-dice/: Cargo.toml
program/programs/roll-dice/src/: lib.rs
program/programs/vrf-sol/: Cargo.toml
program/programs/vrf-sol/src/: compressed_state.rs  ed25519.rs  errors.rs  events.rs  lib.rs  light_cpi.rs  state.rs
program/programs/vrf-sol/src/instructions/: add_consumer.rs  cancel_subscription.rs  close_request.rs  consume.rs  create_subscription.rs  fulfill.rs  fulfill_compressed.rs  fulfill_random_words.rs  fund_subscription.rs  initialize.rs  mod.rs  remove_consumer.rs  request.rs  request_compressed.rs  request_random_words.rs  request_with_callback.rs  update_config.rs
program/tests/: 01-vrf-sol.ts  02-roll-dice.ts  03-integration.ts  04-compressed-vrf.ts  05-gas-comparison.ts
program/tests/keys/: load.ts
scripts/: initialize-vrf.ts  package.json  register-consumer.ts  tsconfig.json
sdk/: README.md  package.json  tsconfig.json
sdk/src/: accounts.ts  client.ts  compressed.ts  constants.ts  index.ts  instructions.ts  pda.ts  types.ts  utils.ts
