[package]
name = "vrf-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1"
tokio = { version = "1.49.0", features = ["full", "signal"] }
solana-client = "3.1.8"
solana-sdk = "3.0.0"
solana-account-decoder = "3.1.8"
solana-commitment-config = "3.1.0"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi"] }
base64 = "0.22"
dotenvy = "0.15"
shellexpand = "3"
futures-util = "0.3"
