[package]
name = "roll-dice"
version = "0.1.0"
description = "Roll dice using VRF randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "roll_dice"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
vrf-sol = { path = "../vrf-sol", features = ["cpi"] }
