[package]
name = "vrf-sol"
version = "0.1.0"
description = "VRF Coordinator - Chainlink VRF v2-style"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
solana-sdk-ids = "2.2"
sha2 = "0.10"
